[package]
name = "peloader"
version = "0.0.1"
authors = ["William Wallace <me@wiox.me>"]
edition = "2018"

[dependencies]
pelite = "0.9"
windows = "0.7.0"
region = "2.2.0"
# com = { git = "https://github.com/microsoft/com-rs", features = ["production"] }
com = { path = "E:/com-rs", features = ["production"] }

# omfg
auxtools = { git = "https://github.com/willox/auxtools" }

[dependencies.detour]
version = "0.7"
default-features = false

[build-dependencies]
windows = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
